BEGIN;

DROP TABLE IF EXISTS "role", "user", "user_has_role", "patchnote", "hero", "spell", "spell_effect", "item", "item_effect", "keyword", "log", "statistic", "setting", "patchnote_entry";
DROP TYPE IF EXISTS "patchnote_state", "item_category", "patchnote_entry_category", "effect_type", "log_action", "statistic_type", "setting_type", "ressource_type";

CREATE TABLE "role" (
    "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "name" VARCHAR(32) NOT NULL UNIQUE,
    "weight" INTEGER NOT NULL UNIQUE
);

CREATE TABLE "user" (
    "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "login" VARCHAR(32) NOT NULL UNIQUE,
    "password" VARCHAR(96) NOT NULL UNIQUE,
    "firstname" VARCHAR(64) NOT NULL,
    "lastname" VARCHAR(64) NOT NULL,
    "nickname" VARCHAR(64) NOT NULL UNIQUE,
    "email" VARCHAR(320) NOT NULL UNIQUE,
    "2fa" BOOLEAN NOT NULL DEFAULT FALSE
);

CREATE TABLE user_has_role (
    "user_id" INTEGER NOT NULL REFERENCES "user"(id) ON DELETE CASCADE,
    "role_id" INTEGER NOT NULL REFERENCES "role"(id) ON DELETE CASCADE,
    PRIMARY KEY ("user_id", "role_id")
);

CREATE TYPE patchnote_state AS ENUM ('DRAFT', 'PUBLISHED', 'ARCHIVED');

CREATE TABLE "patchnote" (
    "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "version" VARCHAR(20) NOT NULL UNIQUE,
    "title" VARCHAR(96) NOT NULL,
    "date" TIMESTAMPTZ NOT NULL UNIQUE,
    "author" VARCHAR(64),
    "content" TEXT,
    "state" patchnote_state NOT NULL
);

CREATE TABLE "hero" (
    "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "name" VARCHAR(64) NOT NULL UNIQUE,
    "resume" VARCHAR(96) NOT NULL,
    "description" TEXT NOT NULL,
    "img_path" VARCHAR(128) UNIQUE,
    "video_path" VARCHAR(128) UNIQUE
);

CREATE TABLE "spell" (
    "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "name" VARCHAR(64) NOT NULL UNIQUE,
    "hero_id" INTEGER NOT NULL REFERENCES "hero"(id) ON DELETE CASCADE,
    "order" INTEGER NOT NULL,
    "description" TEXT NOT NULL,
    "passive" BOOLEAN NOT NULL,
    "charge" BOOLEAN NOT NULL,
    "charge_count" INTEGER NOT NULL DEFAULT 0,
    "charge_time" INTEGER NOT NULL DEFAULT 0,
    "charge_interval" INTEGER NOT NULL DEFAULT 0,
    "cooldown" INTEGER NOT NULL,
    "distance" VARCHAR(96),
    "first_upgrade" VARCHAR(192),
    "second_upgrade" VARCHAR(192),
    "third_upgrade" VARCHAR(192),
    "icon_path" VARCHAR(128),
    "demo_path" VARCHAR(128)
);

CREATE TABLE "spell_effect" (
    "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "spell_id" INTEGER NOT NULL REFERENCES "spell"(id) ON DELETE CASCADE,
    "order" INTEGER NOT NULL,
    "effect" VARCHAR(192) NOT NULL
);

CREATE TYPE item_category AS ENUM ('WEAPON', 'VITALITY', 'SPIRIT');

CREATE TABLE "item" (
    "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "name" VARCHAR(64) NOT NULL UNIQUE,
    "category" item_category NOT NULL,
    "cost" INTEGER NOT NULL,
    "common_bonus" INTEGER NOT NULL,
    "active_description" TEXT,
    "active_duration" INTEGER NOT NULL DEFAULT 0,
    "passive_description" TEXT,
    "passive_duration" INTEGER NOT NULL DEFAULT 0,
    "parent_id" INTEGER REFERENCES "item"(id)
);

CREATE TYPE effect_type AS ENUM ('COMMON', 'ACTIVE', 'PASSIVE');

CREATE TABLE "item_effect" (
    "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "item_id" INTEGER NOT NULL REFERENCES "item"(id) ON DELETE CASCADE,
    "type" effect_type NOT NULL,
    "effect" VARCHAR(192) NOT NULL
);

CREATE TYPE patchnote_entry_category AS ENUM ('BUFF', 'NERF', 'CHANGE', 'FIX');

CREATE TYPE ressource_type AS ENUM ('HERO', 'ITEM', 'SPELL');

CREATE TABLE "patchnote_entry" (
    "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "patchnote_id" INTEGER NOT NULL REFERENCES "patchnote"(id) ON DELETE CASCADE,
    "category" patchnote_entry_category NOT NULl,
    "ressource_type" ressource_type NOT NULL,
    "ressource_id" INTEGER NOT NULL,
    "position" INTEGER NOT NULL,
    "description" TEXT NOT NULL
);

CREATE TABLE "keyword" (
    "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "ressource_type" ressource_type NOT NULL,
    "ressource_id" INTEGER NOT NULL,
    "value" VARCHAR(64) NOT NULL UNIQUE
);

CREATE TYPE log_action AS ENUM ('LOGIN', 'CREATE', 'DELETE', 'EDIT');

CREATE TABLE "log" (
    "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "action" log_action NOT NULL,
    "context" TEXT,
    "user_id" INTEGER NOT NULL REFERENCES "user"(id),
    "ip" INET NOT NULL
);

CREATE TYPE statistic_type AS ENUM ('VIEW', 'CLICK');

CREATE TABLE "statistic" (
    "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "origin" VARCHAR(96) NOT NULL,
    "count" INTEGER NOT NULL,
    "date" TIMESTAMPTZ NOT NULL,
    "type" statistic_type NOT NULL
);

CREATE TYPE setting_type AS ENUM ('URL', 'PATH', 'TEXT');

CREATE TABLE "setting" (
    "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    "key" VARCHAR(64) NOT NULL UNIQUE,
    "value" TEXT,
    "type" setting_type NOT NULL
);

COMMIT;