@startuml
entity "User" as user {
  * id : INT [PK]
  --
  login : VARCHAR(32) NOT NULL UNIQUE
  password : VARCHAR(96) NOT NULL UNIQUE
  firstname : VARCHAR(64) NOT NULL
  lastname : VARCHAR(64) NOT NULL
  nickname : VARCHAR(64) NOT NULL UNIQUE
  email : VARCHAR(320) NOT NULL UNIQUE  
  2fa : BOOLEAN
}

entity "Role" as role {
  * id : INT [PK]
  --
  name : VARCHAR(32) NOT NULL UNIQUE
  weight : INT NOT NULL UNIQUE
}

entity "UserHasRole" as user_has_role {
  user_id : INT NOT NULL [FK]
  --
  role_id : INT NOT NULL [FK]
}

entity "Patchnote" as patchnote {
  * id : INT [PK]
  --
  version : VARCHAR(20) NOT NULL UNIQUE
  title : VARCHAR(96) NOT NULL
  date : TIMESTAMP NOT NULL UNIQUE
  author : VARCHAR(64)
  content : TEXT
  state : ENUM('DRAFT','PUBLISHED','ARCHIVED') NOT NULL
}

entity "Patchnote Entry" as patchnote_entry {
  * id : INT [PK]
  --
  patchnote_id : INT NOT NULL [FK]
  category : ENUM('BUFF', 'NERF', 'CHANGE', 'FIX') NOT NULL
  ressource_type : ENUM('HERO','ITEM','SPELL') NOT NULL
  ressource_id : INT NOT NULL
  position: INT NOT NULL
  description : TEXT NOT NULL
}

entity "Hero" as hero {
  * id : INT [PK]
  --
  name VARCHAR(64) NOT NULL UNIQUE
  resume : VARCHAR(96) NOT NULL
  description : TEXT NOT NULL
  img_path : VARCHAR(128) UNIQUE
  video_path : VARCHAR(128) UNIQUE
}

entity "Item" as item {
  * id : INT [PK]
  --
  category : ENUM('WEAPON','VITALITY','SPIRIT') NOT NULL
  name VARCHAR(64) NOT NULL UNIQUE
  cost : INT NOT NULL
  common_bonus : INT NOT NULL
  active_description : TEXT
  active_duration : INT NOT NULL DEFAULT(0)
  passive_description : TEXT
  passive_duration : INT NOT NULL DEFAULT(0)
  parent_id : INT [FK]
}

entity "Item Effect" as item_effect {
  * id : INT [PK]
  --
  item_id : INT NOT NULL [FK]
  type : ENUM('COMMON','ACTIVE','PASSIVE') NOT NULL
  effect : VARCHAR(192) NOT NULL
}

entity "Spell" as spell {
  * id : INT [PK]
  --
  hero_id : INT NOT NULL [FK]
  order : INT NOT NULL
  name : VARCHAR(64) NOT NULL UNIQUE
  description : TEXT NOT NULL
  passive : BOOLEAN NOT NULL
  charge : BOOLEAN NOT NULL
  charge-count : INT NOT NULL DEFAULT(0)
  charge-time : INT NOT NULL DEFAULT(0)
  charge-interval : INT NOT NULL DEFAULT(0)
  cooldown : INT NOT NULL
  distance : VARCHAR(96)
  first_upgrade : VARCHAR(192)
  second_upgrade : VARCHAR(192)
  third_upgrade : VARCHAR(192)
  icon_path : VARCHAR(128) UNIQUE
  demo_path : VARCHAR(128) UNIQUE
}

entity "Spell Effect" as spell_effect {
  * id : INT [PK]
  --
  spell_id : INT NOT NULL [FK]
  order : INT NOT NULL
  effect : VARCHAR(192) NOT NULL
}

entity "Keyword" as keyword {
  * id : INT [PK]
  --
  ressource_type : ENUM('HERO','ITEM','SPELL') NOT NULL
  ressource_id : INT NOT NULL
  value : VARCHAR(64) NOT NULL UNIQUE
}

entity "Statistic" as statistic {
  * id : INT [PK]
  --
  origin : VARCHAR(96) NOT NULL
  count : INT NOT NULL
  date : TIMESTAMP NOT NULL
  type : ENUM('VIEW','CLICK') NOT NULL
}

entity "Setting" as setting {
  * id : INT [PK]
  --
  key : VARCHAR(64) NOT NULL UNIQUE
  value : TEXT
  type : ENUM('URL','PATH','TEXT') NOT NULL
}

entity "Log" as log {
  * id : INT [PK]
  --
  action : ENUM('LOGIN','CREATE','DELETE','EDIT') NOT NULL
  context : TEXT
  user_id : INT NOT NULL [FK]
  ip : INET NOT NULL
}

user ||--o{ log
hero ||--o{ spell
item ||--o{ item_effect
spell ||--o{ spell_effect
user_has_role }o--|| role
user_has_role }o--|| user
patchnote_entry }o--|| patchnote
@enduml

Entity Relationship Diagram : [https://www.plantuml.com/plantuml/duml/jLRVRzis47xtNq7qnSbG0rqs5EkUgjXqBKIMFLjEEnI3m4cCJLGY3P9APZJzttUaOkk7BCOOi1VxTFUH_FZTySYFIXEfYpmRKAwPFg0t6qNb6qGKAi10tmS8_OHOYdv7VXYXhykxly0p6i5F9hQCW__UMurdtkhgbvjh52uY56w206r2_uyD1jIUAFKaP5e3VdX_3lZ0fDASvBI6VFzhXJGhajSGd2NV78XgDPeJbZN8l-l040BWpGC1sErY4M0l7FmOd7HQYOnQdIGOBfqgFWwPdYZRxdGvkXEsgrRPcH5b5ZybATuH5PzOM0zBsrDzdLQC3BOFKbjhINIouqANA-sFNwwzFbAfcAXNnHbT0GSBPBId922S4csYaJ_7wyYRBy_CG0gz4xAPPt0dWclWRmRZBn4ub2xdmk5cVZMShBnfD7mxN6vk0tyzmnEmpNZ_7ioAmbaL4EPQ7ffQnDJuN8fKqDwS9C1mA-JXnF9sCvqEtw9XY5Vs7_ONViB6clfVXWsb95LA53AXiJxigttEy6e1M_CZF8U_zH87GS-uBYr3MYYc8O-TG4fL8jdUn5uaFglPZ4fXXTg1yUhPS9zKO5hahbfnK4A8vTiOKh2hZV_vvhVhQlf7bbBXWjIsvMkQssqnC5pRwcJqC_QMYn1ISUz7Nk17Vzgi-2i_ggVb8ZqIeTfzmdhpNF3uRy4BrOsIHBD76dUbgiKAIMoWLQCJFFKsGNJrxlgbcVTEP8ENpoH1rQhux55eIOtmmmDDz4dncDflX_0Mrd_G6aTal9ZFRKgySGJ77uobjrw3rSn8kMQzDZxSd6yKwptDCajM6Sj1qnwBVff2fbHsa_ZwlUO-3LMAgWkjKK8x8hVEs2WH1TUEl9w0ckNq4XpZcif7ahcnGcIfUE9TILAcDE59gpiS7nDniTzAaj9MyY2iQ29usX_NEoOTOGQZtLqbfRbm8TfbKozrMpqNrBh5NLH5_wsUx-Z1FDmifs-bxQ3pFzr4K1k5g-hROcgYcT8iAPKyVhbu2ycsZFVVBzsQTpzHsdtctiUVOUVZm1_V3Niw1zMQyMt9kRHTZ24PRaKgtMm7Q3FQh0BRxQ8P_1b03wr0b9GouQ9ZBn31JxC7Yqz-Q3Qymbw4mPZW05i3JzhNdNsj_QChdkx7AzlR06u-EimOzFmy6edlXkh0DDVZjpqZ0tjTbvxwHJAmqGRq66a-gt-8qUZv6HdxVCGu1wr7uJ5sSWy-KfuMUVOl]